# Owaria

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Engine/: Animation.cpp  Animation.h  Camera.cpp  Inventory.cpp  Inventory.h  Main.cpp  Map.cpp  Map.h  Player.cpp  Player.h  Settings.h  Tile.cpp  Tile.h  b2Utils.cpp  b2Utils.h
Engine/AssetStore/: AnimationAsset.cpp  AnimationSet.cpp  AssetStore.cpp  AssetStore.h  ItemAsset.cpp  ObjectAsset.cpp  ObjectSet.cpp  ObjectSet.h  TileAsset.cpp  TileAsset.h
Engine/AssetStore/inc/: AnimationAsset.h  AnimationSet.h  AssetStore.h  ItemAsset.h  ObjectAsset.h
Engine/Combat/: Armor.cpp  Item.cpp  MeleeWeapon.cpp  Weapon.cpp  WeaponData.cpp
Engine/Combat/inc/: Armor.h  Item.h  MeleeWeapon.h  Weapon.h  WeaponData.h
Engine/Editors/: BuildingEditor.cpp  BuildingEditor.h  ObjectEditor.cpp  ObjectEditor.h  TilemapEditor.cpp  TilemapEditor.h
Engine/Editors/inc/: ObjectEditor.h
Engine/Entities/: Building.cpp  Building.h  BuildingAsset.cpp  BuildingAsset.h  BuildingData.h  GameObject.cpp  GameObject.h  GameObjectSet.cpp  GameObjectSet.h  Mob.cpp  Mob.h  Player.cpp  Player.h  game_obj_data.h
Engine/Entities/GameObject/: GameObject.cpp  GameObject.h  GameObjectData.h  GameObjectSet.cpp  GameObjectSet.h  ObjectSet.cpp  ObjectSet.h
Engine/Entities/inc/: Building.h  Mob.h  Player.h
Engine/Map/: Map.cpp  Map.h  Tile.cpp  Tile.h  TileData.h
Engine/Map/inc/: Map.h
Engine/MarchingSquares/: MarchingSolution.h  MarchingSquares.cpp  MarchingSquares.h
Engine/Rendering/: Animation.cpp  Animation.h  Background.cpp  Background.h  Camera.cpp  Camera.h  Effect.cpp  Effect.h  Inventory.cpp  SFMLDebugDraw.cpp  Tileset.cpp  Tileset.h
Engine/Rendering/debugDraw/: SFMLDebugDraw.cpp  SFMLDebugDraw.h
Engine/Rendering/inc/: Animation.h  Inventory.h  SFMLDebugDraw.h
Engine/Utils/: ContactData.h  ContactListener.h  MyContactListener.cpp  MyContactListener.h  Settings.h  XMLUtils.h  b2Utils.h  ioUtils.h  mathUtils.h
Engine/Utils/MarchingSquares/: MarchingSolution.h  MarchingSquares.cpp  MarchingSquares.h
Engine/Utils/inc/: ContactData.h  XMLUtils.h  b2Utils.h  mathUtils.h
Resources/: Test.xml
Resources/Building/: Building.cfg  Tilemap.cfg  Tileset.cfg
Resources/Buildings/Building/: Tilemap.cfg
Resources/Effects/: dust.cfg
Resources/Effects/Dust/: Dust.cfg
Resources/GameObjects/Ladder/: Ladder.cfg  Tileset.cfg
Resources/GameObjects/Tree/: Tileset.cfg  Tree.cfg
Resources/Items/: Items.xml
Resources/Map/: Map.cfg  Map2.cfg  MapBuildings.cfg  MapGameObjects.cfg  Tilemap.cfg  Tilemap2.cfg  Tileset.cfg
Resources/Maps/: TestMap.xml
Resources/Player/: AnimationSet.xml  Player.xml
